# osqp-matlab

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_osqp.m  osqp.m  osqp_mex.cpp  run_ml_backend_tests.m  run_ml_unit_tests.m  run_osqp_tests.m  setupOSQPdevelopmentPath.m  todo.md
codegen/files_to_generate/: CMakeLists.txt
docs/: algorithm.md  building-binaries.md  roadmap.md
examples/: adjoint_derivatives.m  basic_usage.m  code_generation.m  easy_lasso_qp.m  exception_handling.m  interrupt.m  osqp_demo.m  update_matrices.m  update_vectors.m
package/: README.md  install_osqp.m  package_osqp.m
src/: MATLABLDLSolver.m  make_osqp.m  osqp.m  osqp_mex.cpp  osqp_old.m
src/+osqp/: CInterface.m  CapabilitiesType.m  Constants.m  ErrorType.m  LinSysSolverType.m  Options.m  PolishStatusType.m  PrecondType.m  Solver.m  SolverOptions.m  StatusType.m  constant.m  default_settings.m
src/+osqp/+solver/: ErrorType.m  LinSysSolverType.m  LinearSolver.m  PolishStatusType.m  PrecondType.m  StatusType.m
src/+osqp/private/: validateData.m
src/+osqp_/: capabilities.m  version.m
src/codegen/: make_emosqp.m
test/: run_osqp_cinterface_unit_tests.m  run_osqp_matlab_unit_tests.m  run_osqp_unit_tests.m
test/integration/: run_ml_backend_tests.m  run_ml_unit_tests.m
test/mocks/: QDLDLFactorization.m
test/unit/: basic_tests.m  codegen_mat_tests.m  codegen_vec_tests.m  derivative_tests.m  dual_infeasibility_tests.m  feasibility_tests.m  generate_solutions.m  linsys_tests.m  load_high_accuracy.m  non_cvx_tests.m  options_tests.m  polishing_tests.m  primal_infeasibility_tests.m  qdldl_solver_tests.m  solver_coverage_tests.m  solver_cparity_tests.m  solver_tests.m  unconstrained_tests.m  update_matrices_tests.m  utility_tests.m  warm_start_tests.m
unittests/: basic_tests.m  codegen_mat_tests.m  codegen_vec_tests.m  derivative_tests.m  dual_infeasibility_tests.m  feasibility_tests.m  generate_solutions.m  non_cvx_tests.m  polishing_tests.m  primal_infeasibility_tests.m  unconstrained_tests.m  update_matrices_tests.m  warm_start_tests.m
unittests/solutions/: test_basic_QP.mat  test_dual_infeasibility.mat  test_feasibility_problem.mat  test_polish_random.mat  test_polish_simple.mat  test_polish_unconstrained.mat  test_primal_infeasibility.mat  test_solve.mat  test_update_A.mat  test_update_A_allind.mat  test_update_P.mat  test_update_P_A_indA.mat  test_update_bounds.mat  test_update_l.mat  test_update_q.mat  test_update_u.mat
utils/: run_osqp_examples.m  run_osqp_tests.m
(+9 files in other folders)
